Add iPad SVG line animation

--- a/fly_in_disappear/style.css
+++ b/fly_in_disappear/style.css
@@ -7,6 +7,11 @@ body{
 	color: #fff;
 }
 
+h1{
+	text-align: center;
+	margin-top: 10%;
+}
+
 .fly-in-text li{
  list-style: none;
  display: inline-block;
@@ -16,7 +21,7 @@ body{
  transition: all 2.5s ease;
 }
 
-.fly-in-text{
+#animation-wrapper{
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -34,9 +39,7 @@ body{
 	opacity: 0;
 }
 
-
 .disappear-text{
-
  animation: disappear 2.5s forwards;
   animation-delay: 4s;
 }
@@ -45,3 +48,5 @@ body{
 	from{opacity: 1}
 	to{opacity: 0}
 }
+
+
