--- a/image_come_off_when_hover_ transition/style.css
+++ b/image_come_off_when_hover_ transition/style.css
@@ -12,28 +12,30 @@ h1{
 	text-align: center;
 	color: white;
 }
-.trigger{
-	width: 200px;
-	height: 200px;
-	border: 20px solid rgba(225,225,225,.6);
-	background-color: #f3f7e1;
+
+.container{
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 }
+.underlay{
+	width: 200px;
+	height: 200px;
+	border: 20px solid rgba(225,225,225,.6);
+	background-color: #f3f7e1;
+}
 
 .box{
 	display: inline-block;
-	/*background-color: #ea8024;*/
 	background-image: url(http://placekitten.com/200/200);
 	width: 200px;
 	height: 200px;
-	transition: transform 1s ease-in-out;
+	transition: transform 500ms cubic-bezier(0, 1.17, 0.17, 1.32);
 	pointer-events: none;
 }
 
-.trigger:hover .box{
+.underlay:hover .box{
 	transform: translate(200px,150px) rotate(20deg);
 }
 
