--- a/AnimatedDropDown/style.scss
+++ b/AnimatedDropDown/style.scss
@@ -52,22 +52,50 @@ nav{
     left: 0%;
     width:100%;
     padding: 0;
+    background:#1695a3;
     li{
       background: #666;
-      color: rgba(255,255,255,0.7)
-    }
-    &:hover{
+      color: rgba(255,255,255,0.7);
+     &:hover{
       background:#606060;
     }
     &:last-child{
       border-radius: 0px 0px 5px 5px;
-    }
+   }
+  }
+   
   }
 
-ul.drop-menu li {
+// Default Trigger
+//Hide
+ul.drop-menu li { 
   display:none;
 }
-
-li : hover > ul.drop-menu li {
+//Show
+li:hover > ul.drop-menu li {
   display: block;
 }
+
+
+/* Menu1 */
+li:hover > ul.drop-menu.menu-1 li {
+  perspective: 1000px;
+  opacity: 0;
+  @for $i from 1 through 6{
+     &:nth-child(#{$i}){
+      animation: menu1 300ms (150ms * $i) - 300 ease-in-out forwards; 
+    }
+
+  }
+   
+  
+}
+
+@keyframes menu1 {
+  0% {
+    opacity: 0;
+    transform: rotateY(-90deg) translateY(30px);}
+  100% {
+    opacity: 1; 
+     transform: rotateY(0deg) translateY(0px);} 
+  }
