--- a/AnimatedDropDown/style.scss
+++ b/AnimatedDropDown/style.scss
@@ -78,19 +78,21 @@ li:hover > ul.drop-menu li {
 
 
 /* Menu1 */
-li:hover > ul.drop-menu.menu-1 li {
+li:hover > ul.drop-menu.menu-1 {
   perspective: 1000px;
-  opacity: 0;
+
+  li{
+    opacity: 0;
   @for $i from 1 through 6{
      &:nth-child(#{$i}){
-      animation: menu1 300ms (150ms * $i) - 300 ease-in-out forwards; 
+      animation-name: menu1;
+      animation-duration: 300ms;
+      animation-delay: (150ms * $i) - 300;
+      animation-timing-function: ease-in-out;
+      animation-fill-mode: forwards; 
     }
-
   }
-   
-  
 }
-
 @keyframes menu1 {
   0% {
     opacity: 0;
@@ -99,3 +101,78 @@ li:hover > ul.drop-menu.menu-1 li {
     opacity: 1; 
      transform: rotateY(0deg) translateY(0px);} 
   }
+  }
+
+  /* Menu2 */
+li:hover > ul.drop-menu.menu-2 {
+  perspective: 1000px;
+
+  li {
+     opacity: 0;
+     transform-origin: top center;
+
+  @for $i from 1 through 6{
+     &:nth-child(#{$i}){
+      animation: menu2 300ms (150ms * $i) - 300 ease-in-out forwards; 
+    }
+  }
+}
+@keyframes menu2 {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg);}
+  60%{
+    transform: rotateX(-60deg);}
+  100% {
+    opacity: 1; 
+     transform: rotateX(0deg);} 
+  }
+ 
+  }
+/* Menu3 */
+li:hover > ul.drop-menu.menu-3 {
+  perspective: 1000px;
+
+  li{
+    opacity: 0;
+  @for $i from 1 through 6{
+     &:nth-child(#{$i}){
+       animation: menu3 300ms (150ms * $i) - 300 ease-in-out forwards; 
+    }
+  }
+}
+@keyframes menu3 {
+  0% {
+    opacity: 0;
+    transform: scale(0.3) translateY(-60px);}
+  80%{
+    transform:scale(1.2) tanslateY(10px);}
+  100% {
+    opacity: 1; 
+     transform: scale(1) translateY(0px);} 
+  }
+ }
+
+ /* Menu4 */
+li:hover > ul.drop-menu.menu-4 {
+  perspective: 1000px;
+ 
+  li{
+    opacity: 0;
+     transform-origin: top right;
+
+  @for $i from 1 through 6{
+     &:nth-child(#{$i}){
+       animation: menu4 300ms (150ms * $i) - 300 ease-in-out forwards; 
+    }
+  }
+}
+@keyframes menu4 {
+  0% {
+    opacity: 0;
+    transform: rotate(-30deg) translateX(30px);}
+  100% {
+    opacity: 1; 
+     transform: rotateX(0deg) translateX(0px);} 
+  }
+ }
